se añadieron lso endpoitns de catalogo/tarifa
